[package]
name = "agistack-plugin-host"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agistack-core = { path = "../core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
arc-swap.workspace = true

[dev-dependencies]
futures.workspace = true
