[package]
name = "agistack-desktop"
description = "Tauri shell for the MemStack Mission Control desktop client."
edition = "2021"
version = "0.1.0"
license = "MIT"
rust-version = "1.81"

# Bin calls into the lib's run(); the lib name is suffixed to avoid colliding
# with the binary target (standard Tauri 2 layout).
[lib]
name = "agistack_desktop_lib"
crate-type = ["lib"]

[[bin]]
name = "agistack-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
axum = { version = "0.7", features = ["ws"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# The same portable core + embedded device adapters used on every other platform.
agistack-core = { path = "../../../crates/core" }
agistack-adapters-device = { path = "../../../crates/adapters-device" }
agistack-adapters-http-llm = { path = "../../../crates/adapters-http-llm" }
agistack-adapters-local-tools = { path = "../../../crates/adapters-local-tools" }
agistack-adapters-mem = { path = "../../../crates/adapters-mem" }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "=3.6.3", default-features = false, features = ["apple-native"] }
# keyring's `security-framework = "3"` range currently resolves to releases
# above this crate's Rust 1.81 MSRV. Keep the newest compatible native backend.
security-framework = { version = "=3.5.1", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "=3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "=3.6.3", default-features = false, features = [
  "crypto-rust",
  "linux-native-sync-persistent",
] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
